--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "postcss": "^8.4.20",
     "puppeteer": "^19.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
